[gd_scene load_steps=6 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]
[ext_resource path="res://Score.gd" type="Script" id=2]
[ext_resource path="res://HUD.gd" type="Script" id=3]
[ext_resource path="res://hearts/hud_heartFull.png" type="Texture" id=4]
[ext_resource path="res://hearts/hud_heartEmpty.png" type="Texture" id=5]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="TabContainer" type="TabContainer" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -18.0
margin_right = 1061.0
margin_bottom = 595.0

[node name="Button2" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 280.0
margin_top = 168.0
margin_right = 397.0
margin_bottom = 204.0
text = "-"

[node name="Button" type="Button" parent="."]
margin_left = 136.0
margin_top = 165.0
margin_right = 267.0
margin_bottom = 209.0
text = "+"

[node name="Label" type="Label" parent="."]
margin_left = 138.0
margin_top = 98.0
margin_right = 178.0
margin_bottom = 112.0
text = "HP"

[node name="ProgressBarHP" type="ProgressBar" parent="."]
margin_left = 129.0
margin_top = 120.0
margin_right = 388.0
margin_bottom = 156.0
step = 1.0
value = 100.0

[node name="Button3" type="Button" parent="."]
margin_left = 689.0
margin_top = 178.0
margin_right = 794.0
margin_bottom = 213.0
text = "+"

[node name="Button4" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 813.0
margin_top = 173.0
margin_right = 912.0
margin_bottom = 214.0
text = "-"

[node name="Score" type="Label" parent="."]
margin_left = 801.0
margin_top = 134.0
margin_right = 882.0
margin_bottom = 173.0
text = "0"
script = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource( 3 )

[node name="Panel" type="Panel" parent="CanvasLayer"]
margin_left = 195.0
margin_top = 292.0
margin_right = 395.0
margin_bottom = 362.0

[node name="HeartsFull" type="TextureRect" parent="CanvasLayer"]
margin_left = 211.0
margin_top = 309.0
margin_right = 370.0
margin_bottom = 354.0
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="HeartsEmpty" type="TextureRect" parent="CanvasLayer"]
margin_left = 211.0
margin_top = 309.0
margin_right = 370.0
margin_bottom = 354.0
texture = ExtResource( 5 )
expand = true
stretch_mode = 2

[node name="PlusHP" type="Button" parent="CanvasLayer"]
margin_left = 179.0
margin_top = 378.0
margin_right = 296.0
margin_bottom = 418.0
text = "+"

[node name="MinusHP" type="Button" parent="CanvasLayer"]
margin_left = 313.0
margin_top = 373.0
margin_right = 418.0
margin_bottom = 418.0
text = "-"

[connection signal="pressed" from="Button2" to="." method="_on_Button2_pressed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Button3" to="Score" method="_on_Button3_pressed"]
[connection signal="pressed" from="Button4" to="Score" method="_on_Button4_pressed"]
[connection signal="pressed" from="CanvasLayer/PlusHP" to="." method="_on_PlusHP_pressed"]
[connection signal="pressed" from="CanvasLayer/MinusHP" to="." method="_on_MinusHP_pressed"]
